# comms_champion

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  EXAMPLES.md  LICENSE  LICENSE.gpl  LICENSE.lgpl  LICENSE.md  README.md  codeql-analysis.yml
comms/: CMakeLists.txt
comms/doc/: comms.dox  doxygen.conf  layout.xml  main.dox  page_assert.dox  page_custom_checksum_layer.dox  page_custom_id_layer.dox  page_custom_size_layer.dox  page_custom_sync_prefix_layer.dox  page_custom_transport_value_layer.dox  page_define_prot.dox  page_dispatch.dox  page_field.dox  page_handler.dox  page_message.dox  page_prot_stack.dox  page_use_prot.dox
comms/doc/dia/: message_class_hierarchy.dia  protocol_stack_layers.dia
comms/include/comms/: Assert.h  CompileControl.h  EmptyHandler.h  ErrorStatus.h  Field.h  GenericHandler.h  GenericMessage.h  Message.h  MessageBase.h  MsgDispatcher.h  MsgFactory.h  cast.h  comms.h  dispatch.h  field_cast.h  fields.h  iterator.h  options.h  process.h  protocols.h  traits.h  units.h  version.h
comms/include/comms/details/: DispatchMsgHelperType.h  DispatchMsgIdRetrieveHelper.h  DispatchMsgLinearSwitchHelper.h  DispatchMsgPolymorphicHelper.h  DispatchMsgStaticBinSearchHelper.h  FieldBase.h  FieldCastHelper.h  MessageIdTypeRetriever.h  MessageImplBases.h  MessageImplBuilder.h  MessageImplOptionsParser.h  MessageInterfaceBases.h  MessageInterfaceBuilder.h  MessageInterfaceOptionsParser.h  MsgDispatcherOptionsParser.h  MsgFactoryBase.h  MsgFactoryBinSearchBase.h  MsgFactoryDirect.h  MsgFactoryGeneric.h  MsgFactoryOptionsParser.h  MsgFactorySelector.h  MsgFactoryUniq.h  ReadIterator.h  detect.h  (+19 more)
comms/test/: CMakeLists.txt  ChecksumLayer.th  ChecksumPrefixLayer.th  CommsTestCommon.h  CustomChecksumLayer.th  CustomChecksumPrefixLayer.th  CustomMsgIdLayer.th  CustomMsgSizeLayer.th  CustomSyncPrefixLayer.th  CustomTransportValueLayer.th  Dispatch.th  Fields.th  Fields2.th  FieldsTest.cpp  Message.th  MsgDataLayer.th  MsgFactory.th  MsgIdLayer.th  MsgSizeLayer.th  ScriptRunUnitTestWithValgrind.cmake  SyncPrefixLayer.th  TransportValueLayer.th  Util.th
comms/test/catch2/: CMakeLists.txt  CommsTestCommonCatch2.h  FieldsTest.cpp  FieldsTest2.cpp  MessageTest.cpp  README.md
comms_champion/: CMakeLists.txt
comms_champion/app/: CMakeLists.txt
comms_champion/app/cc_dump/: CMakeLists.txt
comms_champion/app/cc_view/: CMakeLists.txt
comms_champion/doc/: comms_champion.dox  doxygen.conf  layout.xml  main.dox  page_custom_app.dox  page_fields_properties.dox  page_filter_plugin.dox  page_plugin.dox  page_protocol_plugin.dox  page_socket_plugin.dox
comms_champion/doc/dia/: app_plugin_lib_rel.dia  demo_protocol_stack.dia  plugin_full_heirarchy.dia  plugin_heirarchy.dia  plugins.dia
comms_champion/lib/: CMakeLists.txt
comms_champion/lib/src/: CMakeLists.txt  ConfigMgr.cpp  DataInfo.cpp  ErrorStatus.cpp  Filter.cpp  Message.cpp  MessageHandler.cpp  MsgFileMgr.cpp  MsgMgr.cpp  MsgMgrImpl.cpp  MsgMgrImpl.h  MsgSendMgr.cpp  MsgSendMgrImpl.cpp  MsgSendMgrImpl.h  Plugin.cpp  PluginMgr.cpp  PluginMgrImpl.cpp  PluginMgrImpl.h  PluginProperties.cpp  Protocol.cpp  Socket.cpp
comms_champion/plugin/: CMakeLists.txt
comms_champion/plugin/echo_socket/: CMakeLists.txt  EchoSocket.cpp  EchoSocket.h  EchoSocketPlugin.cpp  EchoSocketPlugin.h  echo_socket.json
comms_champion/plugin/null_socket/: CMakeLists.txt  NullSocket.cpp  NullSocket.h  NullSocketPlugin.cpp  NullSocketPlugin.h  null_socket.json
comms_champion/plugin/raw_data_protocol/: CMakeLists.txt
comms_champion/plugin/serial_socket/: CMakeLists.txt  SerialSocket.cpp  SerialSocket.h  SerialSocketConfigWidget.cpp  SerialSocketConfigWidget.h  SerialSocketPlugin.cpp  SerialSocketPlugin.h
comms_champion/plugin/udp_socket/: CMakeLists.txt  Plugin.cpp  Plugin.h  Socket.cpp  Socket.h  SocketConfigWidget.cpp  SocketConfigWidget.h  SocketConfigWidget.ui
demo/: CMakeLists.txt
demo/cc_plugin/: AllMessages.h  CMakeLists.txt  Message.cpp  Message.h  Plugin.cpp  Plugin.h  Protocol.cpp  Protocol.h  Stack.h  TransportMessage.cpp  TransportMessage.h
demo/cc_plugin/message/: Bitfields.cpp  Bitfields.h  BitmaskValues.cpp  BitmaskValues.h  EnumValues.cpp  EnumValues.h  FloatValues.cpp  FloatValues.h  IntValues.cpp  IntValues.h  Lists.cpp  Lists.h  Optionals.cpp  Optionals.h  Strings.cpp  Strings.h  Variants.cpp  Variants.h
demo/config/: demo.cfg
demo/doc/: demo.dox  main.dox
demo/include/demo/: DefaultOptions.h  FieldBase.h  Message.h  MsgId.h  Stack.h
src/: CMakeLists.txt  HeartbeatMsg.cpp  Message.cpp  Message.h  MsgMgr.cpp  MsgMgr.h  main.cpp  ui.qrc
src/app/: CMakeLists.txt
src/app/cc_dump/: CMakeLists.txt
src/app/cc_view/: CMakeLists.txt
src/app/comms_champion/: CMakeLists.txt  ui.qrc
src/app/comms_dump/: CMakeLists.txt
src/app/protocol_analyser/: CMakeLists.txt  main.cpp  ui.qrc
src/demo/: CMakeLists.txt
src/demo/cc_plugin/: AllMessages.h  CMakeLists.txt  InvalidMessage.h  Message.h  Plugin.cpp  Plugin.h  Protocol.cpp  Protocol.h  ProtocolMessageBase.h  RawDataMessage.h  Stack.h  TransportMessage.cpp  TransportMessage.h  demo.json
src/demo/doc/: doxygen.conf  main.dox
src/lib/: CMakeLists.txt
src/lib/comms/: CMakeLists.txt
src/lib/comms_champion/: CMakeLists.txt
src/lib/protocol/: CMakeLists.txt
src/plugin/: CMakeLists.txt
src/plugin/echo_socket/: EchoSocket.cpp  EchoSocket.h
src/plugin/null_socket/: NullSocket.cpp  NullSocket.h
src/plugin/raw_data_protocol/: CMakeLists.txt
src/plugin/serial_socket/: SerialSocket.h  SerialSocketConfigWidget.cpp  SerialSocketConfigWidget.h
src/plugin/tcp_socket/: CMakeLists.txt  ClientSocketConfigWidget.cpp  ServerSocket.cpp  ServerSocket.h  ServerSocketConfigWidget.cpp  tcp_client_socket.json
src/plugin/udp_socket/: Plugin.cpp  Plugin.h  Socket.cpp  Socket.h  SocketConfigWidget.h  udp_socket.json
src/protocol/: CMakeLists.txt
src/protocol/demo/: CMakeLists.txt
src/qml/: GlobalConstants.qml  LeftPane.qml  MainWindow.qml  MsgList.qml  RecvAreaToolBar.qml  RecvMsgListArea.qml  RightPane.qml  SendMsgListArea.qml
(+985 files in other folders)
